# zombodb

./: .gitattributes  .gitignore  .travis.yml  AGGREGATE-BUILDER-API.md  AGGREGATIONS.md  BINARY-INSTALLATION.md  BLOCK-ROUTING.md  CAT-API.md  CITUS-SUPPORT.md  CMakeLists.txt  CONFIGURATION-SETTINGS.md  CREATE-INDEX.md  CROSS-INDEX-JOINS.md  Cargo.toml  DEVELOPER.md  INDEX-MANAGEMENT.md  INDEX-OPTIONS.md  INSTALL.md  LICENSE.md  LLAPI.md  Makefile  POSTGIS-SUPPORT.md  QUERY-BUILDER-API.md  QUERY-DSL.md  QUERY-SYNTAX.md  README.md  SCORING-HIGHLIGHTING.md  SEQUENTIAL-SCAN-SUPPORT.md  SIREn-SUPPORT.md  SOURCE-INSTALLATION.md  SQL-API.md  SQL-FUNCTIONS.md  SYNTAX.md  TABLE-SAMPLERS.md  THINGS-TO-KNOW.md  TUTORIAL-data.dmp  TUTORIAL-mapping.json  TUTORIAL.md  TYPE-MAPPING.md  UPGRADING-TO-v2.5.md  (+16 more)
docker-build-system/: Cargo.toml  build.sh  collect-artifacts.sh  package.sh
docker-build-system/disabled-zombodb-build-amazonlinux-2/: Dockerfile
docker-build-system/disabled-zombodb-build-centos-6/: Dockerfile
docker-build-system/disabled-zombodb-build-centos-7/: Dockerfile
docker-build-system/disabled-zombodb-build-centos-8/: Dockerfile
docker-build-system/disabled-zombodb-build-centos-8/zombodb-build-centos-8/: Dockerfile
docker-build-system/disabled-zombodb-build-debian-buster/: Dockerfile
docker-build-system/disabled-zombodb-build-debian-jessie/: Dockerfile
docker-build-system/disabled-zombodb-build-fedora-31/: Dockerfile
docker-build-system/disabled-zombodb-build-fedora-32/: Dockerfile
docker-build-system/disabled-zombodb-build-fedora-33/: Dockerfile
docker-build-system/disabled-zombodb-build-fedora-39/: Dockerfile
docker-build-system/disabled-zombodb-build-ubuntu-eoan/: Dockerfile
docker-build-system/disabled-zombodb-build-ubuntu-xenial/: Dockerfile
docker-build-system/src/: main.rs
docker-build-system/zombodb-build-alpine-3.12/: Dockerfile  build_pg.sh
docker-build-system/zombodb-build-alpine-3.19/: Dockerfile
docker-build-system/zombodb-build-amazonlinux-2/: Dockerfile
docker-build-system/zombodb-build-centos-8/: Dockerfile
docker-build-system/zombodb-build-debian-bookworm/: Dockerfile
docker-build-system/zombodb-build-debian-bullseye/: Dockerfile
docker-build-system/zombodb-build-debian-buster/: Dockerfile
docker-build-system/zombodb-build-debian-jessie/: Dockerfile
docker-build-system/zombodb-build-debian-sid/: Dockerfile
docker-build-system/zombodb-build-debian-stretch/: Dockerfile
docker-build-system/zombodb-build-fedora-31/: Dockerfile
docker-build-system/zombodb-build-fedora-32/: Dockerfile
docker-build-system/zombodb-build-fedora-33/: Dockerfile
docker-build-system/zombodb-build-fedora-35/: Dockerfile
docker-build-system/zombodb-build-fedora-36/: Dockerfile
docker-build-system/zombodb-build-fedora-37/: Dockerfile
docker-build-system/zombodb-build-fedora-39/: Dockerfile
docker-build-system/zombodb-build-ubuntu-bionic/: Dockerfile
docker-build-system/zombodb-build-ubuntu-eoan/: Dockerfile
docker-build-system/zombodb-build-ubuntu-focal/: Dockerfile
docker-build-system/zombodb-build-ubuntu-jammy/: Dockerfile
docker-build-system/zombodb-build-ubuntu-kinetic/: Dockerfile
docker-build-system/zombodb-build-ubuntu-xenial/: Dockerfile
postgres/: CMakeLists.txt  Makefile  compile.sh  es-language-analyzers.dmp  pom.xml  zombodb.c  zombodb.control
postgres/am/: elasticsearch.c  zdb_interface.c  zdbops.h
postgres/rest/: rest.c  rest.h
postgres/sql/: syntax-beer.sql  syntax-one_term.sql  zombodb--2.1.35--2.1.36.sql  zombodb.sql
postgres/src/deb/control/: control
postgres/src/main/c/: zombodb.c
postgres/src/main/shell/: build-packages.sh  compile.sh  create-syntax-test  hack-configs-for-travisci.sh
postgres/src/main/sql/: zombodb--2.1.35--2.1.36.sql  zombodb--2.1.38--2.1.39.sql  zombodb--2.1.39--2.1.40.sql  zombodb--2.1.39--2.5.0.sql  zombodb--2.5.0--2.5.1.sql  zombodb--2.5.0--2.5.1_BETA1.sql  zombodb--2.5.2--2.5.3.sql  zombodb--2.5.4--2.5.5.sql  zombodb--2.5.5--2.5.6.sql  zombodb--2.5.5_BETA1--2.5.5_BETA2.sql  zombodb--2.5.6--2.5.7.sql  zombodb--2.5.7--2.5.8.sql  zombodb--2.5.8--2.6.0.sql  zombodb--2.6.10--3.0.0.sql  zombodb--2.6.11--2.7.0.sql  zombodb--2.6.13--2.7.0_BETA1.sql  zombodb--2.6.14--2.6.14.1.sql  zombodb--2.6.14--2.7.0_BETA1.sql  zombodb--2.6.5--2.6.6.sql  zombodb--2.6.6--2.6.7.sql  zombodb--2.6.7--2.6.8.sql  zombodb--2.6.7.1--2.6.8.sql  zombodb--2.6.8--3.0.0.sql  zombodb--2.7.0_BETA1--2.7.0_BETA2.sql  zombodb--3.0.0--3.1.0.sql  zombodb--3.0.1--3.1.0.sql  zombodb--3.0.1--3.1.0_BETA1.sql  zombodb--3.1.0_BETA2--3.1.0_BETA3.sql  zombodb--3.1.0_BETA3--3.1.0_BETA4.sql  zombodb--3.1.10--3.1.11.sql  zombodb--3.1.12--3.1.13.sql  zombodb--3.1.14--3.1.15.sql  zombodb--3.1.15--3.1.12.sql  zombodb--3.1.15--3.2.0.sql  zombodb--3.1.8--3.1.9.sql  zombodb--4.0.0--4.0.1.sql  zombodb--4.0.0--5.6.3-0.sql  zombodb--5.6.4-1.0.0_beta3--5.6.4-1.0.0_beta4.sql  zombodb--5.6.4-1.0.1--5.6.4-1.0.2.sql  zombodb--5.6.4-1.0.11--5.6.4-1.0.12.sql  (+3 more)
postgres/src/test/: ATTRIBUTION.md  tests.list
postgres/src/test/expected/: 270-beta3-bug.out  TUTORIAL.out  aliases.out  analyzers.out  committed-xid-routing.out  configure.out  counts.out  create-indexes.out  deletes.out  (+130 more)
postgres/test/: create-syntax-test  mysort  tests.list
postgres/test/expected/: configure.out  deletes.out  issue-7.out  syntax-expansion_by_parent_id.out  syntax-phrase.out  updates.out  words.out
postgres/test/sql/: configure.sql  create-indexes.sql  deletes.sql  mappings.sql  syntax-numeric_field_exact-2.sql  syntax-numeric_field_range.sql  syntax-phrase.sql  syntax-wildcard.sql  updates.sql  words.sql
postgres/util/: curl_support.c  curl_support.h  zdbutils.h
src/rust/: .gitignore  Cargo.toml
src/rust/.cargo/: config
src/rust/pg-bridge/: .gitignore  Cargo.toml  build.rs
src/rust/pg-bridge-tests/: Cargo.toml
src/rust/pg-guard/: Cargo.toml
src/rust/pg-guard-rewriter/: Cargo.toml
src/rust/src/: indexam.rs  lib.rs  log.rs  memcxt.rs  panic_guard.rs  playground.rs  rest.rs  smoothing.rs  stringinfo.rs
src/rust/zdb-helper/: Cargo.toml
(+1580 files in other folders)
