[package]
name = "zombodb"
description = "Making Postgres and Elasticsearch work together like it's 2023"
version = "3000.1.24"
edition = "2018"
build = "build.rs"
readme = "README.md"
license = "LICENSE.md"

[lib]
crate-type = [ "cdylib" ]

[features]
default = [ "pg14" ]
pg11 = [ "pgrx/pg11", "pgrx-tests/pg11" ]
pg12 = [ "pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = [ "pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = [ "pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = [ "pgrx/pg15", "pgrx-tests/pg15" ]
pg_test = [ ]

[dependencies]
byteorder = "1.4.3"
chrono = "0.4.26"
cow-utils = "0.1.2"
crossbeam = "0.8.2"
dashmap = "5.5.0"
humantime = "2.1.0"
indexmap = "2.0.0"
lalrpop-util = "0.20.0"
lazy_static = "1.4.0"
levenshtein = "1.0.5"
memoffset = "0.9.0"
num_cpus = "1.16.0"
pgrx = "=0.9.8"
rayon = "1.7.0"
regex = { version = "1.9.1", features = [ "unicode-case"] }
rustc-hash = "1.1.0"
serde = { version = "1.0.177", features = [ "derive" ] }
serde_json = { version = "1.0.104", features = [ "preserve_order" ] }
serde_cbor = "0.11.2"
sqlformat = "0.2.1"
unicode-segmentation = "1.10.1"
ureq = { version = "2.7.1", features = [ "json" ] }
url = "2.4.0"

[build-dependencies]
lalrpop = "0.20.0"
built = { version = "0.6.1", features = [ "git2", "semver" ] }

[dev-dependencies]
pgrx-tests = "=0.9.8"
libc = "0.2.147"

[profile.dev]
panic = "unwind"
debug = true
opt-level = 0

[profile.dev.build-override]
opt-level = 3
debug = 0

[profile.release]
panic = "unwind"
opt-level = 3
lto = "thin"
debug = 0

[profile.artifacts]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
