[package]
name = "zombodb"
description = "Making Postgres and Elasticsearch work together like it's 2023"
version = "3000.2.4"
edition = "2018"
build = "build.rs"
readme = "README.md"
license = "LICENSE.md"

[lib]
crate-type = [ "cdylib" ]

[features]
default = [ "pg14" ]
pg12 = [ "pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = [ "pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = [ "pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = [ "pgrx/pg15", "pgrx-tests/pg15" ]
native_tls = [ "native-tls", "ureq/native-tls" ]
rustls_native_certs = [ "ureq/native-certs" ]
pg_test = []

[dependencies]
byteorder = "1.5.0"
chrono = "0.4.37"
cow-utils = "0.1.3"
crossbeam = "0.8.4"
dashmap = "5.5.3"
humantime = "2.1.0"
indexmap = "2.2.6"
lalrpop-util = "0.20.2"
lazy_static = "1.4.0"
levenshtein = "1.0.5"
memoffset = "0.9.1"
num_cpus = "1.16.0"
pgrx = "=0.9.8"
rayon = "1.10.0"
regex = { version = "1.10.4", features = [ "unicode-case"] }
rustc-hash = "1.1.0"
serde = { version = "1.0.197", features = [ "derive" ] }
serde_json = { version = "1.0.115", features = [ "preserve_order" ] }
serde_cbor = "0.11.2"
sqlformat = "0.2.3"
unicode-segmentation = "1.11.0"
ureq = { version = "2.9.6", features = [ "json" ] }
url = "2.5.0"
native-tls = { version = "0.2.11", optional = true }

[build-dependencies]
lalrpop = "0.20.2"
built = { version = "0.6.1", features = [ "git2", "semver" ] }

[dev-dependencies]
pgrx-tests = "=0.9.8"
libc = "0.2.153"

[profile.dev]
panic = "unwind"
debug = true
opt-level = 0

[profile.dev.build-override]
opt-level = 3
debug = 0

[profile.release]
panic = "unwind"
opt-level = 3
lto = "thin"
debug = 0

[profile.artifacts]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
