[package]
name = "zombodb"
description = "Making Postgres and Elasticsearch work together like it's 2023"
version = "3000.2.7"
edition = "2021"
build = "build.rs"
readme = "README.md"
license = "LICENSE.md"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_zombodb"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg14"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
native_tls = ["native-tls", "ureq/native-tls"]
rustls_native_certs = ["ureq/native-certs"]
pg_test = []

[dependencies]
byteorder = "1.5.0"
chrono = "0.4.40"
cow-utils = "0.1.3"
crossbeam = "0.8.4"
dashmap = "6.1.0"
humantime = "2.1.0"
indexmap = "2.7.1"
lalrpop-util = { version = "0.22.1", features = ["lexer", "unicode"] }
lazy_static = "1.5.0"
levenshtein = "1.0.5"
memoffset = "0.9.1"
num_cpus = "1.16.0"
once_cell = "1.20.3"
pgrx = "0.13.1"
rayon = "1.10.0"
regex = { version = "1.11.1", features = ["unicode-case"] }
rustc-hash = "2.1.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.139", features = ["preserve_order"] }
serde_cbor = "0.11.2"
sqlformat = "0.3.5"
unicode-segmentation = "1.12.0"
ureq = { version = "=2.10.1", features = ["json"] }
url = "2.5.4"
native-tls = { version = "0.2.14", optional = true }

[build-dependencies]
lalrpop = { version = "0.22.1", features = ["lexer", "unicode"] }
built = { version = "0.7.7", features = ["git2", "semver"] }

[dev-dependencies]
pgrx-tests = "0.13.1"
libc = "0.2.170"

[profile.dev]
panic = "unwind"
debug = true
opt-level = 0

[profile.dev.build-override]
opt-level = 3
debug = 0

[profile.release]
panic = "unwind"
opt-level = 3
lto = "thin"
debug = 0

[profile.artifacts]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
