[package]
name = "zombodb-rust-interface"
version = "0.1.0"
authors = ["Eric B. Ridge <eebbrr@gmail.com>"]
edition = "2018"

[lib]
name = "zombodb_rust"
crate-type = ["cdylib"]

[dependencies]
reqwest = "0.9.22"
miniz_oxide = "0.3.5"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"