[package]
name = "pg-bridge"
version = "0.1.0"
authors = ["Eric B. Ridge <eebbrr@gmail.com>"]
edition = "2018"

[dependencies]
pg-guard-attr = { path = "pg-guard-attr/" }
pg-guard = { path = "pg-guard" }
pg-sys = { path = "pg-sys", features = ["pg11"] }

[features]
default = []
pg10 = []
pg11 = []
pg12 = []
