[package]
name = "pg-guard"
version = "0.1.0"
authors = ["Eric B. Ridge <eebbrr@gmail.com>"]
edition = "2018"

[dependencies]
pg-guard-attr = { path = "../pg-guard-attr" }
syn = { version = "1.0.5", features = ["extra-traits", "full", "fold", "parsing"] }
quote = "1.0.2"
proc-macro2 = "1.0.6"
libc = "0.2.66"
