[package]
name = "zdb-helper"
version = "0.1.0"
authors = ["Eric B. Ridge <eebbrr@gmail.com>"]
edition = "2018"

[lib]
name = "zdb_helper"
crate-type = ["staticlib", "cdylib"]

[dependencies]
reqwest = "0.9.22"
miniz_oxide = "0.3.5"
pg-bridge = { path = "../pg-bridge/", features = ["pg11"] }
pg-guard-attr = { path = "../pg-guard-attr" }
pg-guard = { path = "../pg-guard" }
