[package]
name = "pg-guard-attr"
version = "0.1.0"
authors = ["Eric B. Ridge <eebbrr@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
pg-guard-rewriter = { path = "../pg-guard-rewriter" }
syn = { version = "1.0.5", features = ["extra-traits", "full", "fold", "parsing"] }
quote = "1.0.2"
proc-macro2 = "1.0.6"
